# qdrant-langchain-qa

./: README.md  pyproject.toml
notebooks/: qa-with-qdrant-langchain.ipynb  qa-with-qdrant-langchain.slides.html
